NEF-1653 | Custom scrollbar fix

--- a/src/assets/scss/components/scrollbar/_variables.scss
+++ b/src/assets/scss/components/scrollbar/_variables.scss
@@ -1,10 +1,10 @@
 @import '../../utils/variables';
 
-$st-scrollbar-caret-size: 6px;
-$st-scrollbar-base-margin: 2px;
-$st-scrollbar-base-opacity: 0;
-$st-scrollbar-hover-opacity: 1;
-$st-scrollbar-transition: 0.3s;
-$st-scrollbar-caret-background: rgba(127, 149, 225, 0.3);
-$st-scrollbar-caret-background-hover: rgba(127, 149, 225, 0.5);
-$st-scrollbar-caret-border-radius: $st-scrollbar-caret-size / 2;
+$st-scrollbar-caret-size: 6px !default;
+$st-scrollbar-base-margin: 2px !default;
+$st-scrollbar-base-opacity: 0 !default;
+$st-scrollbar-hover-opacity: 1 !default;
+$st-scrollbar-transition: 0.3s !default;
+$st-scrollbar-caret-background: rgba(127, 149, 225, 0.3) !default;
+$st-scrollbar-caret-background-hover: rgba(127, 149, 225, 0.5) !default;
+$st-scrollbar-caret-border-radius: $st-scrollbar-caret-size / 2 !default;
